--- a/pages/ciphers/smithy.liquid
+++ b/pages/ciphers/smithy.liquid
@@ -37,7 +37,7 @@ tags: tools
                 <span class="card-label visually-hidden">{{ filename | upperFirst }} cipher</span>
                 <div class="card-body text-center">
                     <label for="{{ filename }}Text" class="visually-hidden">{{ filename | upperFirst }} encrypt/decrypt string</label>
-                    <textarea placeholder="Example: Hello → World [key] → Rmxsp
+                    <textarea placeholder="Example: Hello &srarr; World [key] &srarr; Rmxsp
                     " rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-cipher" autocomplete="off"></textarea>
                 </div>
                 <div class="card-footer py-3">
