--- a/pages/oni/strings.liquid
+++ b/pages/oni/strings.liquid
@@ -33,7 +33,7 @@ tags: tools
                     <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2 data-to-copy active">{{ filename | prepend: "window." }}(string, n = 4)</code>
                     {% comment -%}
                     <label for="{{ filename }}Text" class="visually-hidden">String to extract</label>
-                    <textarea placeholder="Example: 4 → 'This is a test' → ['This'], ['test']" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-cipher" autocomplete="off"></textarea>
+                    <textarea placeholder="Example: 4 &srarr; 'This is a test' &srarr; ['This'], ['test']" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-cipher" autocomplete="off"></textarea>
                     {%- endcomment -%}
                 </div>
                 <div class="card-footer py-3">
