--- a/pages/text/convrtrs.liquid
+++ b/pages/text/convrtrs.liquid
@@ -28,19 +28,19 @@ tags: tools
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
                     Text
                 </code>
-                    → 
+                    &srarr; 
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
                     Binary
                 </code>
-                    → 
+                    &srarr; 
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
                     Base64
                 </code>
-                    → 
+                    &srarr; 
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
                     Reverse
                 </code>
-                    → 
+                    &srarr; 
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
                     Hexadecimal
                 </code>
