--- a/pages/text/replace.liquid
+++ b/pages/text/replace.liquid
@@ -32,7 +32,7 @@ tags: tools
                 <span class="card-label visually-hidden">Replace characters</span>
                 <div class="card-body text-center">
                     <label for="{{ filename }}Text" class="visually-hidden">Replace characters in a string</label>
-                    <textarea placeholder="Example: Hello → lo → ium → Helium" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-text" autocomplete="off"></textarea>
+                    <textarea placeholder="Example: Hello &srarr; lo &srarr; ium &srarr; Helium" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-text" autocomplete="off"></textarea>
                 </div>
                 <div class="card-footer py-3">
                     <div class="text-center mb-2 g-0">
