--- a/pages/ciphers/caesar.liquid
+++ b/pages/ciphers/caesar.liquid
@@ -67,7 +67,7 @@ tags: tools
                 <span class="card-label visually-hidden">{{ filename | upperFirst }} cipher</span>
                 <div class="card-body text-center">
                     <label for="{{ filename }}Text" class="visually-hidden">{{ filename | upperFirst }} Text - text to substitute</label>
-                    <textarea placeholder="Example: Hello → Mjqqt (Rot 5)" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-text" autocomplete="off"></textarea>
+                    <textarea placeholder="Example: Hello &srarr; Mjqqt (Rot 5)" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-text" autocomplete="off"></textarea>
                 </div>
                 <div class="card-footer py-3">
                     <div class="text-center mb-4 g-0">
