--- a/pages/ciphers/chaocipher.liquid
+++ b/pages/ciphers/chaocipher.liquid
@@ -25,7 +25,7 @@ tags: tools
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
                     Hello World
                 </code>
-                →
+                &srarr;
                 <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">
                     WahqzIuets
                 </code>
@@ -39,7 +39,7 @@ tags: tools
                 <span class="card-label visually-hidden">{{ filename | upperFirst }}</span>
                 <div class="card-body text-center">
                     <label for="{{ filename }}Text" class="visually-hidden">Encrypt or decrypt Chaocipher string</label>
-                    <textarea placeholder="Example: Hello World → WahqzIuets" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-text" autocomplete="off"></textarea>
+                    <textarea placeholder="Example: Hello World &srarr; WahqzIuets" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-text" autocomplete="off"></textarea>
                 </div>
                 <div class="card-footer py-3">
                     <div class="text-center mb-4 g-0">
