--- a/pages/ciphers/hash.liquid
+++ b/pages/ciphers/hash.liquid
@@ -31,7 +31,7 @@ tags: tools
                 <span class="card-label visually-hidden">Hash text</span>
                 <div class="card-body text-center">
                     <label for="{{ filename }}Text" class="visually-hidden">Generate hash values for a string</label>
-                    <textarea placeholder="Example: Hello World → b10a8db164e0754105b7a99be72e3fe5" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-text" autocomplete="off"></textarea>
+                    <textarea placeholder="Example: Hello World &srarr; b10a8db164e0754105b7a99be72e3fe5" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-text" autocomplete="off"></textarea>
                 </div>
                 <div class="card-footer py-3">
                     <div class="d-flex justify-content-start align-items-center">
