--- a/pages/ciphers/keyword.liquid
+++ b/pages/ciphers/keyword.liquid
@@ -33,7 +33,7 @@ tags: tools
                 <span class="card-label visually-hidden">{{ filename | upperFirst }} cipher</span>
                 <div class="card-body text-center">
                     <label for="{{ filename }}Text" class="visually-hidden">{{ filename | upperFirst }} encrypt/decrypt string</label>
-                    <textarea placeholder="Example: Hello World → Test [key] → Eckkn Unqkb
+                    <textarea placeholder="Example: Hello World &srarr; Test [key] &srarr; Eckkn Unqkb
                     " rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-cipher" autocomplete="off"></textarea>
                 </div>
                 <div class="card-footer py-3">
