--- a/pages/ciphers/rail.liquid
+++ b/pages/ciphers/rail.liquid
@@ -47,7 +47,7 @@ tags: tools
                 <span class="card-label visually-hidden">Rail fence cipher</span>
                 <div class="card-body text-center">
                     <label for="{{ filename }}Text" class="visually-hidden">Encrypt / Decrypt Rail fence string</label>
-                    <textarea placeholder="Example: HELLO WORLD → HOLELWRDLO" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-cipher" autocomplete="off"></textarea>
+                    <textarea placeholder="Example: HELLO WORLD &srarr; HOLELWRDLO" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-cipher" autocomplete="off"></textarea>
                 </div>
                 <div class="card-footer py-3">
                     <div class="text-center mb-4 g-0">
