--- a/pages/misc/elements.liquid
+++ b/pages/misc/elements.liquid
@@ -37,7 +37,7 @@ tags: tools
                 <span class="card-label visually-hidden">Periodic elements conversion</span>
                 <div class="card-body text-center">
                     <label for="{{ filename }}Textarea" class="visually-hidden">Periodic element conversion</label>
-                    <textarea placeholder="34,7,52,7,58 [Atomic Number] → Se,N,Te,N,Ce" rows="6" id="{{ filename }}Textarea" class="form-control flip-text" autocomplete="off"></textarea>
+                    <textarea placeholder="34,7,52,7,58 [Atomic Number] &srarr; Se,N,Te,N,Ce" rows="6" id="{{ filename }}Textarea" class="form-control flip-text" autocomplete="off"></textarea>
                 </div>
                 <div class="card-footer py-3">
                     <div class="mb-2 g-0">
