--- a/pages/oni/unscramble.liquid
+++ b/pages/oni/unscramble.liquid
@@ -21,7 +21,7 @@ tags: tools
         <hr class="d-none my-0 mx-4">
         <div class="section-description py-3 px-2 px-sm-4">
             <p class="px-2">
-                Unscrambles a string by interleaving its characters. For example: <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">abcdef</code> → <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2 data-to-copy active">badcfe</code>
+                Unscrambles a string by interleaving its characters. For example: <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">abcdef</code> &srarr; <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2 data-to-copy active">badcfe</code>
             </p>
         </div>
     </div>
