--- a/pages/text/flip.liquid
+++ b/pages/text/flip.liquid
@@ -31,7 +31,7 @@ tags: tools
                 <span class="card-label visually-hidden">Flip Text</span>
                 <div class="card-body text-center">
                     <label for="{{ filename }}Text" class="visually-hidden">Flip text upside down</label>
-                    <textarea placeholder="Example: Hello → Hǝןןo" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-text" autocomplete="off"></textarea>
+                    <textarea placeholder="Example: Hello &srarr; Hǝןןo" rows="6" id="{{ filename }}Text" class="form-control {{ filename }}-text" autocomplete="off"></textarea>
                 </div>
                 <div class="card-footer py-3">
                     <div class="d-flex justify-content-start align-items-center">
