This is absolutely not a "quick overview" 😂
Clean up title and description and clean up the markdown formatting of the license file

--- a/community/license.liquid
+++ b/community/license.liquid
@@ -1,7 +1,7 @@
 ---
 layout: layout.liquid
-title: License | Attribution-NonCommercial-ShareAlike 4.0 International
-description: This page gives a quick overview of the license we use for the project — a way to share and remix content freely, as long as you give credit, don't use it commercially, and keep the same license.
+title: License
+description: The license we use for the project — a way to share and remix content freely, as long as you give credit, don't use it commercially, and keep the same license.
 page-id: license
 eleventyExcludeFromCollections: true
 ---
