Update search tags for community pages

--- a/community/accessibility.liquid
+++ b/community/accessibility.liquid
@@ -6,6 +6,7 @@ page-id: accessibility
 eleventyExcludeFromCollections: true
 eleventyComputed:
   description: '{{ description }}<br />Last updated: <code class="d-inline-flex px-2 bg-success bg-opacity-10 border border-success border-opacity-10 rounded-2">{{ lastmod | date: "%B %d, %Y" }}</code>'
+tags: community
 ---
 
 <section class="section changelog accessibility">
