--- a/community/code-of-conduct.liquid
+++ b/community/code-of-conduct.liquid
@@ -10,6 +10,6 @@ tags: community
 ---
 <section class="section changelog code-of-conduct">
   <article class="py-4 px-2 px-sm-4">
-        {% renderMarkdownFile "./CODE_OF_CONDUCT.md" %}
+        {% renderFile "./CODE_OF_CONDUCT.md" %}
     </article>
 </section>
