--- a/community/license.liquid
+++ b/community/license.liquid
@@ -8,6 +8,6 @@ tags: community
 ---
 <section class="section changelog license">
     <article class="py-4 px-2 px-sm-4">
-        {% renderMarkdownFile "LICENSE" %}
+        {% renderFile "LICENSE.md" %}
     </article>
 </section>
