--- a/community/security.liquid
+++ b/community/security.liquid
@@ -10,6 +10,6 @@ tags: community
 ---
 <section class="section changelog security">
   <article class="py-4 px-2 px-sm-4">
-        {% renderMarkdownFile "./SECURITY.md" %}
+        {% renderFile "./SECURITY.md" %}
     </article>
 </section>
