Adjustment for license page
as we don't want indentation there

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1069,6 +1069,11 @@ mark {
         margin-left: 1rem;
         border-left: 0.25rem solid var(--convrtr-bg-color-50);
     }
+    &.license {
+        blockquote {
+            margin-left: 0;
+        }
+    }
 }
 
 .changelog,
