When you're an idiot and couldn't find the already built in filters that handled the stuff you built filters for.

--- a/_includes/layout/breadcrumbs.liquid
+++ b/_includes/layout/breadcrumbs.liquid
@@ -34,7 +34,7 @@
         </li>
         {% else %}
         <li class="breadcrumb-item active" aria-current="page">
-            {{ page-id | lowercase }}
+            {{ page-id | downcase }}
         </li>
         {% endif %}
     </ol>
