--- a/pages/misc/covenant.liquid
+++ b/pages/misc/covenant.liquid
@@ -38,7 +38,7 @@ tags: tools
                         <button type="button" class="btn btn-outline-convrtr p-0 mb-1 border border-3 border-convrtr rounded-circle cov-glyph" id="cov-{{ i }}" aria-label="Glyph: {{ i }}" data-bs-toggle="tooltip" data-bs-placement="top" title="Glyph: {{ i }}">{{ i }}</button>
                     {%- endfor -%}
                     {%- for letter in letters %}
-                        <button type="button" class="btn btn-outline-convrtr p-0 mb-1 border border-3 border-convrtr rounded-circle cov-glyph" id="cov-{{ letter | uppercase }}" aria-label="Glyph: {{ letter | uppercase }}" data-bs-toggle="tooltip" data-bs-placement="top" title="Glyph: {{ letter | uppercase }}">{{ letter | uppercase }}</button>
+                        <button type="button" class="btn btn-outline-convrtr p-0 mb-1 border border-3 border-convrtr rounded-circle cov-glyph" id="cov-{{ letter | upcase }}" aria-label="Glyph: {{ letter | upcase }}" data-bs-toggle="tooltip" data-bs-placement="top" title="Glyph: {{ letter | upcase }}">{{ letter | upcase }}</button>
                     {%- endfor %}
                     </div>
                 </div>
