--- a/pages/misc/elements.liquid
+++ b/pages/misc/elements.liquid
@@ -11,7 +11,7 @@ tags: tools
             aria-expanded="false" aria-controls="{{ filename }}Collapse"
             data-section-name="{{ filename }}" data-section-description="Toggle visibility of {{ filename }} section">
             <h2 class="display-6 w-100 d-flex m-0" data-pagefind-ignore="all">
-                {{ filename | upperFirst }}
+                {{ filename | capitalize }}
             </h2>
             <span class="text-light px-1 border rounded align-self-end toggle-button" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-original-title="Collapse section">
                 <i class="bi bi-arrow-up lh-base"></i>
