--- a/pages/text/convrtrs.liquid
+++ b/pages/text/convrtrs.liquid
@@ -13,7 +13,7 @@ tags: tools
             data-section-name="{{ filename }}" data-section-description="Toggle visibility of {{ filename }} section"
             data-pagefind-ignore="all">
             <h2 class="display-6 w-100 d-flex m-0">
-                {{ filename | upperFirst }}
+                {{ filename | capitalize }}
             </h2>
             <span class="text-light px-1 border rounded align-self-end toggle-button">
                 <i class="bi bi-arrow-up lh-base"></i>
