--- a/pages/text/flip.liquid
+++ b/pages/text/flip.liquid
@@ -12,7 +12,7 @@ tags: tools
             data-section-description="Toggle visibility of {{ filename }} section"
             data-pagefind-ignore="all">
             <h2 class="display-6 w-100 d-flex m-0">
-                {{ filename | upperFirst }} text
+                {{ filename | capitalize }} text
             </h2>
             <span class="text-light px-1 border rounded align-self-end toggle-button">
                 <i class="bi bi-arrow-up lh-base"></i>
@@ -35,7 +35,7 @@ tags: tools
                 </div>
                 <div class="card-footer py-3">
                     <div class="d-flex justify-content-start align-items-center">
-                        <button type="button" class="btn btn-md btn-convrtr" id="{{ filename }}Decode" title="Flip text upside down">{{ filename | upperFirst }}</button>
+                        <button type="button" class="btn btn-md btn-convrtr" id="{{ filename }}Decode" title="Flip text upside down">{{ filename | capitalize }}</button>
                         <div class="form-check form-switch mx-2">
                             <input class="form-check-input" type="checkbox" role="switch" id="{{ filename }}Direction" aria-checked="false" aria-labelledby="{{ filename }}DirectionLabel">
                             <label class="form-check-label" id="{{ filename }}DirectionLabel" for="{{ filename }}Direction">Reverse</label>
