Clean up config and packages
Remove markdown-it, as render plugin already handles things
Replaced the one instance of renderMarkdownFile with renderFile, keeps things nice and consistent
Rebuilt package install to clear out old versions

--- a/community/contributing.liquid
+++ b/community/contributing.liquid
@@ -10,6 +10,6 @@ tags: community
 ---
 <section class="section changelog contributing">
   <article class="py-4 px-3 px-sm-4">
-        {% renderMarkdownFile "./CONTRIBUTING.md" %}
+        {% renderFile "./CONTRIBUTING.md" %}
     </article>
 </section>
