Increase font size on results that include image generation

--- a/pages/misc/pigpen.liquid
+++ b/pages/misc/pigpen.liquid
@@ -63,7 +63,7 @@ tags: misc
                         </div>
                     </div>
                     <hr />
-                    <div id="{{ filename }}Results" class="data-to-copy active convrtr-results"></div>
+                    <div id="{{ filename }}Results" class="data-to-copy active convrtr-results h5"></div>
                     <div id="{{ filename }}ImageResults" class="pigpen convrtr-results"></div>
                 </div>
             </div>
