--- a/pages/misc/forerunner.liquid
+++ b/pages/misc/forerunner.liquid
@@ -64,7 +64,7 @@ tags: tools
                         </div>
                     </div>
                     <hr />
-                    <div id="{{ filename }}Results" class="data-to-copy active convrtr-results"></div>
+                    <div id="{{ filename }}Results" class="data-to-copy active convrtr-results h5"></div>
                     <div id="{{ filename }}ImageResults" class="forerunner convrtr-results"></div>
                 </div>
             </div>
