Fix color contrast of highlighted search terms when in dark mode

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1008,6 +1008,7 @@ mark {
 }
 @include color-mode(dark) {
     mark {
+        color: var(--bs-white);
         background-color: var(--convrtr-bg-color);
     }
 }
