--- a/_includes/layout/scripts.liquid
+++ b/_includes/layout/scripts.liquid
@@ -22,11 +22,11 @@
 <script src="{{ '/assets/js/files/exif-reader.js' | url }}"></script>
 {%- endif %}
 <script src="{{ '/pagefind/pagefind-ui.js' | url }}"></script>
-{%- if page-id == 'search' -%}
+{%- if page-id == "search" -%}
 <script type="module" src="{{ '/assets/js/search.mjs' | url }}"></script>
 {%- else %}
 <script type="module" src="{{ '/assets/js/search-global.mjs' | url }}"></script>
 {%- endif %}
-{%- if page-id == 'settings' -%}
+{%- if page-id == "settings" -%}
 <script type="module" src="{{ '/assets/js/settings/settings.mjs' | url }}"></script>
 {%- endif %}
